--- a/app/pages/example/example.html
+++ b/app/pages/example/example.html
@@ -1,5 +1,13 @@
-<h2>Example</h2>
+<h2>Example Controller</h2>
 
-Here is an example, with name {{name}}.
 
-<div data-example-input="" data-value="value"/>
+<h3>Embedded component/directive here</h3>
+
+<div data-example-input="" data-value="value"></div>
+
+
+<h3>Call to a service here</h3>
+
+<input type="text" data-ng-model="name"/>
+<button ng-click="getMessage()">Request service as {{name}}</button>
+<div ng-repeat="msg in messages track by $index">{{msg}}<br/>---</div>
