--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <!-- Dependencies -->
             <!-- Angular -->
             <script type="text/javascript" src="bower_components/angular/angular.js"></script> 
+            <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
             <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 
         <!-- Project -->
@@ -15,14 +16,15 @@
             <script type="text/javascript" src="app/pages/example/example.ctrl.js"></script> 
             <!-- Components -->
             <script type="text/javascript" src="app/common/components/example_input/example_input.drv.js"></script> 
+            <!-- Services -->
+            <script type="text/javascript" src="app/common/services/example.srv.js"></script> 
 
         <title>Angular Structure Example</title>
 
     </head>
 
     <body>
-        <h1>Angular Minimal Project</h1>
-
+        <h1>This is main page</h1>
         <div data-ui-view></div>
     </body>
 </html>
