--- a/app/pages/example/example.html
+++ b/app/pages/example/example.html
@@ -10,4 +10,5 @@
 
 <input type="text" data-ng-model="name"/>
 <button ng-click="getMessage()">Request service as {{name}}</button>
+<div ng-if="lastError != ''" style="color:red;">{{lastError}}</div>
 <div ng-repeat="msg in messages track by $index">{{msg}}<br/>---</div>
