Switch to angularAMD (requirejs)

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html data-ng-app="myApp">
+<html>
     <head>
         <meta charset="UTF-8">
         <!-- Dependencies -->
             <!-- Angular -->
-            <script type="text/javascript" src="bower_components/angular/angular.js"></script> 
-            <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
-            <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+<!--             // <script type="text/javascript" src="bower_components/angular/angular.js"></script> 
+            // <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
+            // <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script> -->
 
         <!-- Project -->
             <!-- Config -->
-            <script type="text/javascript" src="app/config/module.js"></script> 
-            <script type="text/javascript" src="app/config/routes.js"></script> 
+            <script data-main="main.js" src="bower_components/requirejs/require.js"></script>
+            <!-- <script type="text/javascript" src="app/config/module.js"></script>  -->
+            <!-- <script type="text/javascript" src="app/config/routes.js"></script>  -->
             <!-- Pages -->
-            <script type="text/javascript" src="app/pages/example/example.ctrl.js"></script> 
+           <!--  <script type="text/javascript" src="app/pages/example/example.ctrl.js"></script>  -->
             <!-- Components -->
-            <script type="text/javascript" src="app/common/components/example_input/example_input.drv.js"></script> 
+            <!-- <script type="text/javascript" src="app/common/components/example_input/example_input.drv.js"></script>  -->
             <!-- Services -->
-            <script type="text/javascript" src="app/common/services/example.srv.js"></script> 
-
+            <!-- <script type="text/javascript" src="app/common/services/example.srv.js"></script>  -->
         <title>Angular Structure Example</title>
 
     </head>
