--- a/app/pages/example/example.html
+++ b/app/pages/example/example.html
@@ -3,6 +3,9 @@
 
 <h3>Embedded component/directive here</h3>
 
+<p>
+    <div data-form-register callback="register" password-min-length="8"></div>
+</p>
 <div data-example-input="" data-value="value"></div>
 
 
