--- a/index.html
+++ b/index.html
@@ -1,30 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UTF-8">
-        <!-- Dependencies -->
-            <!-- Angular -->
-<!--             // <script type="text/javascript" src="bower_components/angular/angular.js"></script> 
-            // <script type="text/javascript" src="bower_components/angular-resource/angular-resource.js"></script>
-            // <script type="text/javascript" src="bower_components/angular-ui-router/release/angular-ui-router.js"></script> -->
+        <meta charset="UTF-8"/>
+        <base href=""/>
 
-        <!-- Project -->
             <!-- Config -->
             <script data-main="main.js" src="bower_components/requirejs/require.js"></script>
-            <!-- <script type="text/javascript" src="app/config/module.js"></script>  -->
-            <!-- <script type="text/javascript" src="app/config/routes.js"></script>  -->
-            <!-- Pages -->
-           <!--  <script type="text/javascript" src="app/pages/example/example.ctrl.js"></script>  -->
-            <!-- Components -->
-            <!-- <script type="text/javascript" src="app/common/components/example_input/example_input.drv.js"></script>  -->
-            <!-- Services -->
-            <!-- <script type="text/javascript" src="app/common/services/example.srv.js"></script>  -->
+
         <title>Angular Structure Example</title>
 
     </head>
 
     <body>
-        <h1>This is main page</h1>
         <div data-ui-view></div>
     </body>
 </html>
