--- a/app/pages/example/example.html
+++ b/app/pages/example/example.html
@@ -17,6 +17,11 @@
 
 	<span ui-view>
 
+	<button analytics-on="click" analytics-event="Button 1" analytics-category="Commands">Click angularitics</button>
+	<span analytics-on="mouseover" analytics-event="Button 2" analytics-category="Intend">
+		<button analytics-on="click" analytics-event="Button 2" analytics-category="Commands">Click </button>
+	</span>
+
 	<h3>Embedded component/directive here</h3>
 		<div data-example-input="" data-value="value"></div>
 
@@ -27,4 +32,8 @@
 		<div ng-if="lastError != ''" style="color:red;">{{lastError}}</div>
 		<div ng-repeat="msg in messages track by $index">{{msg}}<br/>---</div>
 	</span>
+
+	<div style="height: 720px;"></div>
+	<button id="testscroll" analytics-on="scrollby" scrollby-offset="50%" scrollby-trigger-once analytics-category="Interest">Scrolled to me ! (tracked)</button>
+	<div style="height: 480px;"></div>
 </div>
